2025-06-07T00:54:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15502482010 # 667
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-07
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 851 1329 / 852 1330
* notice: next accum: outdated-unq outdated-all / unq all: 852 1330 / 853 1331
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-05-24] / [2025-06-06]

2025-06-06T00:54:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15480370937 # 666
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-06
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 850 1328 / 852 1330
* notice: next accum: outdated-unq outdated-all / unq all: 851 1329 / 852 1330
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-05-23] / []

2025-06-05T00:54:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15455888802 # 665
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-05
* notice: last 14d: unq all: 1 2
* notice: prev accum: outdated-unq outdated-all / unq all: 849 1327 / 852 1330
* notice: next accum: outdated-unq outdated-all / unq all: 850 1328 / 852 1330
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-05-22] / []

2025-06-04T00:55:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15431026108 # 664