@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2025-06-07T00:54:26Z",
+  "timestamp" : "2025-06-08T01:00:34Z",
   "count_outdated" : 1330,
   "uniques_outdated" : 852,
-  "count" : 1331,
-  "uniques" : 853,
+  "count" : 1332,
+  "uniques" : 854,
   "clones" : [
     {
       "timestamp": "2025-06-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-06-07T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
