@@ -1,3 +1,12 @@
+2025-06-08T01:00:34Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15513341697 # 668
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-08
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 852 1330 / 853 1331
+* notice: next accum: outdated-unq outdated-all / unq all: 852 1330 / 854 1332
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-06-07]
+
 2025-06-07T00:54:26Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15502482010 # 667
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-07
